ext/standard/tests/general_functions/get_magic_quotes_gpc.phpt
@@ -17,13 +17,9 @@ var_dump(get_magic_quotes_gpc(true));
 ===DONE===
 --EXPECTF--
 Simple testcase for get_magic_quotes_gpc() function
-
-Deprecated: Function get_magic_quotes_gpc() is deprecated in %s on line %d
 bool(false)
 
 -- Error cases --
-
-Deprecated: Function get_magic_quotes_gpc() is deprecated in %s on line %d
 
 Warning: get_magic_quotes_gpc() expects exactly 0 parameters, 1 given in %s on line %d
 NULL
