ext/standard/tests/general_functions/get_magic_quotes_runtime.phpt
@@ -18,13 +18,9 @@ var_dump(get_magic_quotes_runtime(true));
 ===DONE===
 --EXPECTF--
 Simple testcase for get_magic_quotes_runtime() function
-
-Deprecated: Function get_magic_quotes_runtime() is deprecated in %s on line %d
 bool(false)
 
 -- Error cases --
-
-Deprecated: Function get_magic_quotes_runtime() is deprecated in %s on line %d
 
 Warning: get_magic_quotes_runtime() expects exactly 0 parameters, 1 given in %s on line %d
 NULL
